# Richkware

./: .gitignore  CMakeLists.txt  Makefile  README.md  Richkware.cpp  Richkware.h  SECURITY.md  aes_kat  aes_verify  appveyor.yml  blockApps.cpp  blockApps.h  build.bat  build.sh  crypto.cpp  crypto.h  main.cpp  main_simple.cpp  network.cpp  network.h  protocol.cpp  richkware.cpp  richkware.h  sharedList.cpp  sharedList.h  sharedResources.cpp  sharedResources.h  sharedResources.templates.h  storage.cpp  storage.h  thread.cpp  thread.h
.github/workflows/: ci.yml  codeql.yml
cmake/: RichkwareConfig.cmake.in
example/: main.cpp  main_TODO.cpp  main_reverse_command.cpp  main_spyware-backdoor.cpp
include/: HTTPRequest.hpp
include/richkware/core/: agent.hpp  types.hpp
include/richkware/crypto/: cipher.hpp
include/richkware/modules/: anti_analysis.hpp  command_executor.hpp  file_manager.hpp  keylogger.hpp  process_manager.hpp  screenshot.hpp  self_deletion.hpp
include/richkware/network/: client.hpp
include/richkware/system/: persistence.hpp
include/richkware/utils/: json.hpp  logger.hpp
src/: aes_openssl.cpp  aes_openssl.hpp  blockApps.cpp  blockApps.h  crypto.cpp  crypto.h  network.cpp  network.h  protocol.cpp  protocol.h  richkware.cpp  richkware.h  sha256.cpp  sha256.hpp  sharedResources.cpp  sharedResources.h  sharedResources.templates.h  storage.cpp  storage.h  utils.cpp  utils.h
src/core/: agent.cpp
src/crypto/: cipher.cpp
src/modules/: anti_analysis.cpp  command_executor.cpp  file_manager.cpp  keylogger.cpp  process_manager.cpp  screenshot.cpp  self_deletion.cpp
src/network/: client.cpp
src/system/: persistence.cpp
test/: aes_kat.cpp  aes_verify.cpp  test.cpp
tests/: CMakeLists.txt
tests/unit/: test_core.cpp
